ADD: validações com ZOD e atualização readme, CORREÇÔES: Swagger.yaml & dotenv
